--- a/src/Components/Organisms/OrderSummaryCard.scss
+++ b/src/Components/Organisms/OrderSummaryCard.scss
@@ -1,18 +1,18 @@
 .order-summary-page {
     display: flex;
-    justify-content: center;  /* Centra horizontalmente */
-    align-items: center;      /* Centra verticalmente */
-    height: 100vh;           /* Asegura que el contenedor ocupe toda la altura de la ventana */
-    background-color: #f0f4ff; /* Color de fondo opcional, puedes cambiarlo */
+    justify-content: center;  
+    align-items: center;      
+    height: 100vh;           
+    background-color: #f0f4ff; 
   }
   
   .order-summary-card {
-    width: 300px;           /* Ancho de la tarjeta */
-    background-color: white; /* Color de fondo de la tarjeta */
-    border-radius: 15px;    /* Esquinas redondeadas */
-    box-shadow: 0 15px 25px rgba(0, 0, 0, 0.1); /* Sombra de la tarjeta */
-    padding: 20px;          /* Espaciado interno */
-    text-align: center;     /* Texto centrado */
+    width: 300px;           
+    background-color: white; 
+    border-radius: 15px;    
+    box-shadow: 0 15px 25px rgba(0, 0, 0, 0.1); 
+       
+    text-align: center;     
   }
   
   .order-image img {
@@ -21,5 +21,5 @@
     border-top-right-radius: 15px; 
   }
   
-  
+
   
